[bug fix] the previous commit had a problem when executing a domain script;